<resources>
    <string name="app_name">CompassSurfer</string>
    <string name="home">Home</string>
    <string name="peoples">Peoples</string>
    <string name="department">Department</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
    <string name="reset_all">Reset all</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="view">View</string>
    <string name="navigate">Navigate</string>
    <string name="name">Name</string>
    <string name="department1">Department</string>
    <string name="description">Description</string>
    <string name="des">Hi there! I am a BTech student who wants to be an app developer. I chose this profession because I love to create things using technology.</string>
</resources>